--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <html>
   <body>
     <h1>Welcome to my page</h1>
-  
+    <p>
+      This website was built by Daniel Clarke while compleating CSCI434: Web Programming at Southwestern College.
+    </p>
+    <p>
+      In the course of completing this course, I will build his website along these projected objectives. 
+    </p> 
+    <p> 
+      Unit 2: I will add 2 paragraphs describing myself, 3 links to websites that are related to my hobbies, <br>
+      at least two pictures relating to myself or my hobbies, and plans for future additions to my website.<br>
+    </p>
+    <p>
+      I chose github to host my repository mostly due to an element of peer pressure. In my time as a student <br>
+      and in my private time researching programming, github is the site I have seen the most frequently. 
+    </p>
   </body>
 </html>
