--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
     <p>
         Week 3 Objectives: <br>
-        I will be creating a design document that will outling a multimedia page for this website that  teaches <br>
+        I will be creating a design document that will outlining a multimedia page for this website that  teaches <br>
         a simple skill or process. This skill or process will be related to a hobby or interest of mine. I will <br>
         modify my page further based on that living document.
     </p>
