--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <h1>Welcome to my page</h1>
     <div class="topnav">
-      <a class="active" href="C:\Users\Daniel\OneDrive\Desktop\USB Folder\CSCI434\Week 3\dclarkeWeek2.html">Home</a>
-      <a href="C:\Users\Daniel\OneDrive\Desktop\USB Folder\CSCI434\Week 3\multimedia.html">Multimedia</a>
+      <a class="active" href="index.html">Home</a>
+      <a href="multimedia.html">Multimedia</a>
     </div>
     <h2>Week 1</h2>
     <p class="normal">
