--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset=utf-8 />
         <title>Daniel's website</title>
-        <link rel="\mypage.css">
+        <link rel="mypage.css">
     </head>
   <body>
     <h1>Welcome to my page</h1>
