--- a/multimedia.html
+++ b/multimedia.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset=utf-8 />
         <title>multimedia</title>
-        <link rel="stylesheet" href="mypage.css">
+        <link rel="stylesheet" href="/mypage.css">
     </head>
   <body>
     <h1>Multimedia</h1>
