Image file location changed

--- a/multimedia.html
+++ b/multimedia.html
@@ -21,61 +21,61 @@
     </div>
     <div>
       <div class="global-setup">
-      <img src="global1.jpg" alt = "Picture Global setup step 1" height="200" width="200" />
+      <img src="images/global1.jpg" alt = "Picture Global setup step 1" height="200" width="200" />
       <p>
         Board: Place on the table, showing the side matching your player count (1-3 or 4-5).
       </p>
-      <img src="global2.jpg" alt = "Picture Global setup step 2" height="200" width="200" />
+      <img src="images/global2.jpg" alt = "Picture Global setup step 2" height="200" width="200" />
       <p>
         Planet Tiles: Shuffle and place in a stack face down next tothe board.
       </p>
       </div>
       <div class="global-setup">
-      <img src="global3.jpg" alt = "Picture Global setup step 3" height="200" width="200" />
+      <img src="images/global3.jpg" alt = "Picture Global setup step 3" height="200" width="200" />
       <p>
         Explore Tokens: Randomly place 1 face up on each planet spot in the planet grid, then return excess explore tokens to the box.
       </p>
-      <img src="global4.jpg" alt = "Picture Global setup step 4" height="200" width="200" />
+      <img src="images/global4.jpg" alt = "Picture Global setup step 4" height="200" width="200" />
       <P>
         Queenship Miniature: Place on its starting location in the planet grid.
       </P>
     </div>
     <div class="global-setup">
-      <img src="global5.jpg" alt = "Picture Global setup step 5" height="200" width="200" />
+      <img src="images/global5.jpg" alt = "Picture Global setup step 5" height="200" width="200" />
       <p>
         Dance Tiles: Randomly place 1 face up on each of the rectangular spots on the Convert action. Return excess dance tiles to the box.
       </p>
-      <img src="global6.jpg" alt = "Picture Global setup step 6" height="200" width="200" />
+      <img src="images/global6.jpg" alt = "Picture Global setup step 6" height="200" width="200" />
       <p>
         Dance Tokens: Place in a stack on the Convert action (these are not randomized; they are open information for all players).
       </p>
     </div>
     <div class="global-setup">
-      <img src="global7.jpg" alt = "Picture Global setup step 7" height="200" width="200" />
+      <img src="images/global7.jpg" alt = "Picture Global setup step 7" height="200" width="200" />
       <p>
         Seed Cards: Shuffle and place in a deck face down on the Research action.
       </p>
-      <img src="global8.jpg" alt = "Picture Global setup step 8" height="200" width="200" />
+      <img src="images/global8.jpg" alt = "Picture Global setup step 8" height="200" width="200" />
       <p>
         Farm Tiles: Shuffle and place 1 tile face up on each farm tile slot, then place the rest in a stack face down on the Advance action.
       </p>
     </div>
     <div class="global-setup">
-      <img src="global9.jpg" alt = "Picture Global setup step 9" height="200" width="200" />
+      <img src="images/global9.jpg" alt = "Picture Global setup step 9" height="200" width="200" />
       <p>
         Recruit Tiles: Shuffle and place 1 tile face up on each recruit tile slot, then place the rest in a stack face down on the Advance action.
       </p>
-      <img src="global10.jpg" alt = "Picture Global setup step 10" height="200" width="200" />
+      <img src="images/global10.jpg" alt = "Picture Global setup step 10" height="200" width="200" />
       <p>
         Development Tiles: Shuffle and place 1 tile face up on each development tile slot, then place the rest in a stack face down on the Advace action.
       </p>
     </div>
       <div class="global-setup">
-      <img src="global11.jpg" alt = "Picture Global setup step 12" height="200" width="200" />
+      <img src="images/global11.jpg" alt = "Picture Global setup step 12" height="200" width="200" />
       <p>
         Carving Tiles: Shuffle and place 1 tile face up on each slot on the Carve action, then return excess carving tiles to the box.
       </p>
-      <img src="global12.jpg" alt = "Picture Global setup step 12" height="200" width="200" />
+      <img src="images/global12.jpg" alt = "Picture Global setup step 12" height="200" width="200" />
       <p>
         Place all other items-frames, fiber, pollen, water, wax, and honey-in a general supply next to the board.
       </p>
@@ -86,11 +86,11 @@
             <h2 class="footer-text">Interesting sites for Daniel Clarke</h2>  
         </div>
         <div class="footer-symbol">
-        <a target="_blank" rel="noopener noreferrer" href="https://www.miniaturemarket.com/"><img src="miniature-market-logo.png" alt="miniature-market-logo"></a>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.miniaturemarket.com/"><img src="images/miniature-market-logo.png" alt="miniature-market-logo"></a>
 
-        <a target="_blank" rel="noopener noreferrer" href="https://www.tcgplayer.com/"><img src="TCGplayer-logo-primary@2x.png" alt="TCGplayer-logo"></a>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.tcgplayer.com/"><img src="images/TCGplayer-logo-primary@2x.png" alt="TCGplayer-logo"></a>
 
-        <a target="_blank" rel="noopener noreferrer" href="https://www.crunchyroll.com/"><img src="Crunchyroll-Emblem-700x394.png" alt="TCGplayer-logo"></a>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.crunchyroll.com/"><img src="images/Crunchyroll-Emblem-700x394.png" alt="TCGplayer-logo"></a>
         
     </div>
   </div>
