Update to files for css

--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
     </p> 
     <p class="normal"> 
       Week 2 Objectives: <br>
-       I will add 2 paragraphs describing myself, 3 links to websites that are related to my hobbies, <br>
-      at least two pictures relating to myself or my hobbies, and plans for future additions to my website.<br>
+       I will add 2 paragraphs describing myself, 3 links to websites that are related to my hobbies, 
+      at least two pictures relating to myself or my hobbies, and plans for future additions to my website.
     </p>
     <p class="normal">
-      I chose github to host my repository mostly due to an element of peer pressure. In my time as a student <br>
+      I chose github to host my repository mostly due to an element of peer pressure. In my time as a student 
       and in my private time researching programming, github is the site I have seen the most frequently. 
     </p>
     <h2>Week 2</h2>
     <p class="normal">
-        I am Daniel Clarke. I am a Staff Sergeant in the US Air Force. My job is to maintain the various pieces of equipment <br>
-        that is used for air traffic control. Those are things like radar, radios, and navigation aids. In my shop we have a <br>
+        I am Daniel Clarke. I am a Staff Sergeant in the US Air Force. My job is to maintain the various pieces of equipment 
+        that is used for air traffic control. Those are things like radar, radios, and navigation aids. In my shop we have a 
         slogan that is a play on the YOLO acronym: Without us, <em>you only land once</em>. 
     </p>
     <p class="normal">
-        That is me in my work time. In my off time, I do a lot of nerdy things. I have several dozen games that can take as <br>
-        long as 9 hours to complete or even weeks for campaign games. I am also somewhat of a chef. Not anywhere near a <br>
-        professional level, but I do all right. I recently aquired a smoker so I have been playing around with that. <br>
-        I have a labrador/australian shepherd who is a big old goober for those he loves, but a fierce guardian to <br>
+        That is me in my work time. In my off time, I do a lot of nerdy things. I have several dozen games that can take as 
+        long as 9 hours to complete or even weeks for campaign games. I am also somewhat of a chef. Not anywhere near a 
+        professional level, but I do all right. I recently aquired a smoker so I have been playing around with that. 
+        I have a labrador/australian shepherd who is a big old goober for those he loves, but a fierce guardian to 
         those he does not know. 
     </p>
     <div class="pictures">
@@ -49,10 +49,11 @@
       </div>
     </div>
     <div>
-    <p>
-        Week 3 Objectives: <br>
-        I will be creating a design document that will outling a multimedia page for this website that  teaches <br>
-        a simple skill or process. This skill or process will be related to a hobby or interest of mine. I will <br>
+      
+    <p class="normal">
+        Week 3 Objectives: 
+        I will be creating a design document that will outling a multimedia page for this website that  teaches 
+        a simple skill or process. This skill or process will be related to a hobby or interest of mine. I will 
         modify my page further based on that living document.
     </p>
   </div>
