Updated image file location

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         those he does not know. 
     </p>
     <div class="pictures">
-        <img src="doggo.jpg" alt = "Picture of dog" height="200" width="200" />
+        <img src="images/doggo.jpg" alt = "Picture of dog" height="200" width="200" />
         <p>This is me and my dog</p>
       </div>
       <div class="pictures">
-        <img class="middle-img" src="steakntaters.jpg" alt="picture of steak and potatoes" height="200" width="200" />
+        <img class="middle-img" src="images/steakntaters.jpg" alt="picture of steak and potatoes" height="200" width="200" />
         <p>This is some mesquite smoked steak and taters</p>
       </div>
     </div>
@@ -62,11 +62,11 @@
             <h2 class="footer-text">Interesting sites for Daniel Clarke</h2>  
         </div>
         <div class="footer-symbol">
-        <a target="_blank" rel="noopener noreferrer" href="https://www.miniaturemarket.com/"><img src="miniature-market-logo.png" alt="miniature-market-logo"></a>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.miniaturemarket.com/"><img src="images/miniature-market-logo.png" alt="miniature-market-logo"></a>
 
-        <a target="_blank" rel="noopener noreferrer" href="https://www.tcgplayer.com/"><img src="TCGplayer-logo-primary@2x.png" alt="TCGplayer-logo"></a>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.tcgplayer.com/"><img src="images/TCGplayer-logo-primary@2x.png" alt="TCGplayer-logo"></a>
 
-        <a target="_blank" rel="noopener noreferrer" href="https://www.crunchyroll.com/"><img src="Crunchyroll-Emblem-700x394.png" alt="TCGplayer-logo"></a>
+        <a target="_blank" rel="noopener noreferrer" href="https://www.crunchyroll.com/"><img src="images/Crunchyroll-Emblem-700x394.png" alt="TCGplayer-logo"></a>
         
     </div>
   </div>
