Add Header to global setup

--- a/multimedia.html
+++ b/multimedia.html
@@ -19,6 +19,7 @@
           Fantastic video from YouTube channel <em>Watch It Played</em> demonstrating setup and how to play Stonemaier's Apiary.
       </p>
   </div>
+  <h1>Global Setup</h1>
   <div>
     <div class="global-setup">
       <h2>1.</h2>
