--- a/index.html
+++ b/index.html
@@ -51,12 +51,20 @@
     <div>
       
     <p class="normal">
-        Week 3 Objectives: 
+        Week 3 Objectives: <br>
         I will be creating a design document that will outling a multimedia page for this website that  teaches 
         a simple skill or process. This skill or process will be related to a hobby or interest of mine. I will 
         modify my page further based on that living document.
     </p>
   </div>
+  <h2>Week 4</h2>
+  <div>
+  <p>
+    Week 5 Objectives: <br>
+    During week 5 of my course I will use the design document to add 3 more pages to my website. These will include 
+    an image gallery, a links page, and a page displaying my design document. 
+  </p>
+</div>
   <div class="footer">
         <div class="footer-head">
             <h2 class="footer-text">Interesting sites for Daniel Clarke</h2>  
