Added new page. Added links to rest of pages

--- a/multimedia.html
+++ b/multimedia.html
@@ -9,6 +9,7 @@
     <div class="topnav">
       <a href="\index.html">Home</a>
       <a class="active" href="\multimedia.html">Multimedia</a>
+      <a href="links.html">Links</a>
     </div>
     <div class="video">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/KdzNSPQlML0?si=GNRD2mw2rxdxlJVG" 
