--- a/multimedia.html
+++ b/multimedia.html
@@ -9,6 +9,7 @@
     <div class="topnav">
       <a href="\index.html">Home</a>
       <a class="active" href="\multimedia.html">Multimedia</a>
+      <a href="gallery.html">Gallery</a>
       <a href="links.html">Links</a>
     </div>
     <div class="video">
