--- a/links.html
+++ b/links.html
@@ -6,12 +6,16 @@
     </head>
   <body>
     <h1>Daniel's Links</h1>
-    <div class="topnav">
-      <a href="index.html">Home</a>
-      <a href="multimedia.html">Multimedia</a>
-      <a href="gallery.html">Gallery</a>
-      <a class="active" href="links.html">Links</a>
-    </div>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="\index.html">Home</a></li>
+          <li><a href="\multimedia.html">Multimedia</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a class="active" href="links.html">Links</a></li>
+        </ul>
+      </nav>
+    </header>
     <div>
       <a target="_blank" rel="noopener noreferrer" href="https://www.miniaturemarket.com/"><img src="images/miniature-market-logo.png" alt="miniature-market-logo"></a>
 
