--- a/multimedia.html
+++ b/multimedia.html
@@ -6,12 +6,16 @@
     </head>
   <body>
     <h1>Multimedia</h1>
-    <div class="topnav">
-      <a href="\index.html">Home</a>
-      <a class="active" href="\multimedia.html">Multimedia</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="links.html">Links</a>
-    </div>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="\index.html">Home</a></li>
+          <li><a class="active" href="\multimedia.html">Multimedia</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="links.html">Links</a></li>
+        </ul>
+      </nav>
+    </header>
     <div class="video">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/KdzNSPQlML0?si=GNRD2mw2rxdxlJVG" 
           title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
