--- a/gallery.html
+++ b/gallery.html
@@ -7,12 +7,16 @@
     </head>
   <body>
     <h1>Gallery</h1>
-    <div class="topnav">
-      <a href="index.html">Home</a>
-      <a href="multimedia.html">Multimedia</a>
-      <a class="active" href="gallery.html">Gallery</a>
-      <a href="links.html">Links</a>
-    </div>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="\index.html">Home</a></li>
+            <li><a href="\multimedia.html">Multimedia</a></li>
+            <li><a class="active" href="gallery.html">Gallery</a></li>
+            <li><a href="links.html">Links</a></li>
+          </ul>
+        </nav>
+      </header>
     
   <div class="footer">
         <div class="footer-head">
