--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     </head>
   <body>
     <h1>Welcome to my page</h1>
-    <div class="topnav">
-      <a class="active" href="index.html">Home</a>
-      <a href="multimedia.html">Multimedia</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="links.html">Links</a>
-    </div>
+    <header>
+      <nav>
+        <ul>
+          <li><a class="active" href="\index.html">Home</a></li>
+          <li><a href="\multimedia.html">Multimedia</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="links.html">Links</a></li>
+        </ul>
+      </nav>
+    </header>
     <h2>Week 1</h2>
     <p class="normal">
       This website was built by Daniel Clarke while compleating CSCI434: Web Programming at Southwestern College.
