--- a/multimedia.html
+++ b/multimedia.html
@@ -28,76 +28,87 @@
   <h1>Global Setup</h1>
   <div>
     <div class="global-setup">
-      <h2>1.</h2>
+      <h2>1.<br>Board: </h2>
+      <p>
+        Place on the table, showing the side matching your player count (1-3 or 4-5).
+      </p>
     <img src="images/global1.jpg" alt = "Picture Global setup step 1" height="200" width="200" />
-    <p>
-      Board: Place on the table, showing the side matching your player count (1-3 or 4-5).
-    </p>
-    <h2>2.</h2>
-    <img src="images/global2.jpg" alt = "Picture Global setup step 2" height="200" width="200" />
-    <p>
-      Planet Tiles: Shuffle and place in a stack face down next tothe board.
-    </p>
     </div>
     <div class="global-setup">
-      <h2>3.</h2>
-    <img src="images/global3.jpg" alt = "Picture Global setup step 3" height="200" width="200" />
+    <h2>2.<br>Planet Tiles: </h2>
     <p>
-      Explore Tokens: Randomly place 1 face up on each planet spot in the planet grid, then return excess explore tokens to the box.
+      Shuffle and place in a stack face down next tothe board.
     </p>
-    <h2>4.</h2>
-    <img src="images/global4.jpg" alt = "Picture Global setup step 4" height="200" width="200" />
-    <P>
-      Queenship Miniature: Place on its starting location in the planet grid.
-    </P>
-  </div>
-  <div class="global-setup">
-    <h2>5.</h2>
-    <img src="images/global5.jpg" alt = "Picture Global setup step 5" height="200" width="200" />
-    <p>
-      Dance Tiles: Randomly place 1 face up on each of the rectangular spots on the Convert action. Return excess dance tiles to the box.
-    </p>
-    <h2>6.</h2>
-    <img src="images/global6.jpg" alt = "Picture Global setup step 6" height="200" width="200" />
-    <p>
-      Dance Tokens: Place in a stack on the Convert action (these are not randomized; they are open information for all players).
-    </p>
-  </div>
-  <div class="global-setup">
-    <h2>7.</h2>
-    <img src="images/global7.jpg" alt = "Picture Global setup step 7" height="200" width="200" />
-    <p>
-      Seed Cards: Shuffle and place in a deck face down on the Research action.
-    </p>
-    <h2>8.</h2>
-    <img src="images/global8.jpg" alt = "Picture Global setup step 8" height="200" width="200" />
-    <p>
-      Farm Tiles: Shuffle and place 1 tile face up on each farm tile slot, then place the rest in a stack face down on the Advance action.
-    </p>
-  </div>
-  <div class="global-setup">
-    <h2>9.</h2>
-    <img src="images/global9.jpg" alt = "Picture Global setup step 9" height="200" width="200" />
-    <p>
-      Recruit Tiles: Shuffle and place 1 tile face up on each recruit tile slot, then place the rest in a stack face down on the Advance action.
-    </p>
-    <h2>10.</h2>
-    <img src="images/global10.jpg" alt = "Picture Global setup step 10" height="200" width="200" />
-    <p>
-      Development Tiles: Shuffle and place 1 tile face up on each development tile slot, then place the rest in a stack face down on the Advace action.
-    </p>
-  </div>
+    <img src="images/global2.jpg" alt = "Picture Global setup step 2" height="200" width="200" />
+    </div>
     <div class="global-setup">
-      <h2>11.</h2>
-    <img src="images/global11.jpg" alt = "Picture Global setup step 12" height="200" width="200" />
+      <h2>3.<br>Explore Tokens:</h2>
+      <p>
+        Randomly place 1 face up on each planet spot in the planet grid, then return excess explore tokens to the box.
+      </p>
+    <img src="images/global3.jpg" alt = "Picture Global setup step 3" height="200" width="200" />
+    </div>
+    <div class="global-setup">
+    <h2>4.<br>Queenship Miniature: </h2>
+    <P>
+      Place on its starting location in the planet grid.
+    </P>
+    <img src="images/global4.jpg" alt = "Picture Global setup step 4" height="200" width="200" />
+  </div>
+  <div class="global-setup">
+    <h2>5.<br>Dance Tiles: </h2>
     <p>
-      Carving Tiles: Shuffle and place 1 tile face up on each slot on the Carve action, then return excess carving tiles to the box.
+      Randomly place 1 face up on each of the rectangular spots on the Convert action. Return excess dance tiles to the box.
     </p>
-    <h2>12.</h2>
-    <img src="images/global12.jpg" alt = "Picture Global setup step 12" height="200" width="200" />
+    <img src="images/global5.jpg" alt = "Picture Global setup step 5" height="200" width="200" />
+  </div>
+  <div class="global-setup">
+    <h2>6.<br>Dance Tokens: </h2>
+    <p>
+      Place in a stack on the Convert action (these are not randomized; they are open information for all players).
+    </p>
+    <img src="images/global6.jpg" alt = "Picture Global setup step 6" height="200" width="200" />
+  </div>
+  <div class="global-setup">
+    <h2>7.<br>Seed Cards:</h2>
+    <p>
+      Shuffle and place in a deck face down on the Research action.
+    </p>
+    <img src="images/global7.jpg" alt = "Picture Global setup step 7" height="200" width="200" />
+  </div>
+  <div class="global-setup">
+    <h2>8.<br>Farm Tiles: </h2>
+    <p>
+      Shuffle and place 1 tile face up on each farm tile slot, then place the rest in a stack face down on the Advance action.
+    </p>
+    <img src="images/global8.jpg" alt = "Picture Global setup step 8" height="200" width="200" />
+  </div>
+  <div class="global-setup">
+    <h2>9.<br>Recruit Tiles: </h2>
+    <p>
+      Shuffle and place 1 tile face up on each recruit tile slot, then place the rest in a stack face down on the Advance action.
+    </p>
+    <img src="images/global9.jpg" alt = "Picture Global setup step 9" height="200" width="200" />
+  </div>
+  <div class="global-setup">
+    <h2>10.<br>Development Tiles: </h2>
+    <p>
+      Shuffle and place 1 tile face up on each development tile slot, then place the rest in a stack face down on the Advace action.
+    </p>
+    <img src="images/global10.jpg" alt = "Picture Global setup step 10" height="200" width="200" />
+  </div>
+  <div class="global-setup">
+    <h2>11.<br>Carving Tiles: </h2>
+    <p>
+      Shuffle and place 1 tile face up on each slot on the Carve action, then return excess carving tiles to the box.
+    </p>
+    <img src="images/global11.jpg" alt = "Picture Global setup step 12" height="200" width="200" />
+  </div>
+    <h2>12.<br>Supplies:</h2>
     <p>
       Place all other items-frames, fiber, pollen, water, wax, and honey-in a general supply next to the board.
     </p>
+    <img src="images/global12.jpg" alt = "Picture Global setup step 12" height="200" width="200" />
     </div>
   </div>
 <div class="footer">
