--- a/multimedia.html
+++ b/multimedia.html
@@ -26,7 +26,7 @@
       </p>
   </div>
   <h1>Global Setup</h1>
-  <div>
+  <div class="how-to">
     <div class="global-setup">
       <h2>1.<br>Board: </h2>
       <p>
@@ -104,6 +104,7 @@
     </p>
     <img src="images/global11.jpg" alt = "Picture Global setup step 12" height="200" width="200" />
   </div>
+  <div class="global-setup">
     <h2>12.<br>Supplies:</h2>
     <p>
       Place all other items-frames, fiber, pollen, water, wax, and honey-in a general supply next to the board.
