--- a/multimedia.html
+++ b/multimedia.html
@@ -26,7 +26,7 @@
       </p>
   </div>
   <h1>Global Setup</h1>
-  <div class="how-to">
+  <section class="how-to">
     <div class="global-setup">
       <h2>1.<br>Board: </h2>
       <p>
@@ -111,7 +111,7 @@
     </p>
     <img src="images/global12.jpg" alt = "Picture Global setup step 12" height="200" width="200" />
     </div>
-  </div>
+</section>
 <div class="footer">
       <div class="footer-head">
           <h2 class="footer-text">Interesting sites for Daniel Clarke</h2>  
