--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,34 @@
           </ul>
         </nav>
       </header>
-    
+      <div class="gallery">
+        <a target="_blank" href="images/Crunchyroll-Emblem-700x394.png">
+          <img src="images/Crunchyroll-Emblem-700x394.png" alt="Crunchyroll-Emblem" width="600" height="400">
+        </a>
+        <div class="desc">Crunchyroll: A popular website for all things anime.</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="images/miniature-market-logo.png">
+          <img src="images/miniature-market-logo.png" alt="miniature-market-logo" width="600" height="400">
+        </a>
+        <div class="desc">Miniature Market: Best online source of games and miniatures.</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="images/TCGplayer-logo-primary@2x.png">
+          <img src="images/TCGplayer-logo-primary@2x.png" alt="TCGplayer-logo" width="600" height="400">
+        </a>
+        <div class="desc">TCGplayer: A great source of trading card singles.</div>
+      </div>
+      
+      <div class="gallery">
+        <a target="_blank" href="images/doggo.jpg">
+          <img src="images/doggo.jpg" alt="Daniel and his dog" width="600" height="400">
+        </a>
+        <div class="desc">Daniel and his dog: Shaun</div>
+      </div>
+
   <div class="footer">
         <div class="footer-head">
             <h2 class="footer-text">Interesting sites for Daniel Clarke</h2>  
