Add Pictures to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -41,11 +41,61 @@
       
         <div class="gallery">
           <a target="_blank" href="images/doggo.jpg">
-            <img src="images/doggo.jpg" alt="Daniel and his dog" width="200" height="200">
+            <img src="images/doggo.jpg" alt="Daniel and his dog">
           </a>
           <div class="desc">Daniel and his dog: Shaun</div>
         </div>
+
+        <div class="gallery">
+          <a target="_blank" href="images/armada_capital.jpg">
+            <img src="images/armada_capital.jpg" alt="Star Wars Armada ships">
+          </a>
+          <div class="desc">Star Wars Armada ships</div>
         </div>
+
+        <div class="gallery">
+          <a target="_blank" href="images/x-wing_squadron.jpg">
+            <img src="images/x-wing_squadron.jpg" alt="Star Wars X-Wing fighters">
+          </a>
+          <div class="desc">Star Wars X-Wing fighters</div>
+        </div>
+
+        <div class="gallery">
+          <a target="_blank" href="images/paint_station.jpg">
+            <img src="images/paint_station.jpg" alt="Star Wars Legion mid painting">
+          </a>
+          <div class="desc">Star Wars Legion mid painting</div>
+        </div>
+
+        <div class="gallery">
+          <a target="_blank" href="images/del_meeko.jpg">
+            <img src="images/del_meeko.jpg" alt="Star Wars Legion Del Meeko">
+          </a>
+          <div class="desc">Star Wars Legion Del Meeko special forces unit</div>
+        </div>
+
+        <div class="gallery">
+          <a target="_blank" href="images/legion_battle.jpg">
+            <img src="images/legion_battle.jpg" alt="Star Wars Legion Battle">
+          </a>
+          <div class="desc">Star Wars Legion Battle</div>
+        </div>
+
+        <div class="gallery">
+          <a target="_blank" href="images/TI4_battle.jpg">
+            <img src="images/TI4_battle.jpg" alt="Twilight Imperium mid game">
+          </a>
+          <div class="desc">Twilight Imperium mid game</div>
+        </div>
+
+        <div class="gallery">
+          <a target="_blank" href="images/wingspan_board.jpg">
+            <img src="images/wingspan_board.jpg" alt="Wingspan Player Board">
+          </a>
+          <div class="desc">Wingspan Player Board</div>
+        </div>
+
+      </div>
   <div class="footer">
         <div class="footer-head">
             <h2 class="footer-text">Interesting sites for Daniel Clarke</h2>  
