--- a/gallery.html
+++ b/gallery.html
@@ -14,6 +14,7 @@
             <li><a href="\multimedia.html">Multimedia</a></li>
             <li><a class="active" href="gallery.html">Gallery</a></li>
             <li><a href="links.html">Links</a></li>
+            <li><a href="user_design.html">Links</a></li>
           </ul>
         </nav>
       </header>
