design page link change

--- a/user_design.html
+++ b/user_design.html
@@ -14,7 +14,7 @@
           <li><a href="\multimedia.html">Multimedia</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="links.html">Links</a></li>
-          <li><a class="active" href="user_design.html">Links</a></li>
+          <li><a class="active" href="user_design.html">User Design</a></li>
         </ul>
       </nav>
     </header>
