--- a/links.html
+++ b/links.html
@@ -13,7 +13,7 @@
           <li><a href="\multimedia.html">Multimedia</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a class="active" href="links.html">Links</a></li>
-          <li><a href="user_design.html">Links</a></li>
+          <li><a href="user_design.html">User Design</a></li>
         </ul>
       </nav>
     </header>
