add images to ukser design

--- a/user_design.html
+++ b/user_design.html
@@ -18,7 +18,31 @@
         </ul>
       </nav>
     </header>
+
+    <div class="pictures">
+        <img src="images/Index_template.png" alt = "Picture of dog" height="800" width="800" />
+        <p>This is me and my dog</p>
+    </div>
+
+    <div class="pictures">
+        <img src="images/multimedia_template.png" alt = "Picture of dog" height="800" width="800" />
+        <p>This is me and my dog</p>
+    </div>
+
+    <div class="pictures">
+        <img src="images/gallery_template.png" alt = "Picture of dog" height="800" width="800" />
+        <p>This is me and my dog</p>
+    </div>
+    
+    <div class="pictures">
+        <img src="images/link_template.png" alt = "Picture of dog" height="800" width="800" />
+        <p>This is me and my dog</p>
+    </div>
    
+    <div class="pictures">
+        <img src="images/user_design_template.png" alt = "Picture of dog" height="800" width="800" />
+        <p>This is me and my dog</p>
+    </div>
   <div class="footer">
         <div class="footer-head">
             <h2 class="footer-text">Interesting sites for Daniel Clarke</h2>  
