change links page

--- a/links.html
+++ b/links.html
@@ -18,11 +18,11 @@
       </nav>
     </header>
     <div>
-      <a target="_blank" rel="noopener noreferrer" href="https://www.miniaturemarket.com/"><img src="images/miniature-market-logo.png" alt="miniature-market-logo"></a>
+      <a target="_blank" rel="noopener noreferrer" href="https://www.miniaturemarket.com/"><img src="images/miniature-market-logo.png" alt="miniature-market-logo"></a><br>
 
-      <a target="_blank" rel="noopener noreferrer" href="https://www.tcgplayer.com/"><img src="images/TCGplayer-logo-primary@2x.png" alt="TCGplayer-logo"></a>
+      <a target="_blank" rel="noopener noreferrer" href="https://www.tcgplayer.com/"><img src="images/TCGplayer-logo-primary@2x.png" alt="TCGplayer-logo"></a><br>
 
-      <a target="_blank" rel="noopener noreferrer" href="https://www.crunchyroll.com/"><img src="images/Crunchyroll-Emblem-700x394.png" alt="TCGplayer-logo"></a>
+      <a target="_blank" rel="noopener noreferrer" href="https://www.crunchyroll.com/"><img src="images/Crunchyroll-Emblem-700x394.png" alt="TCGplayer-logo"></a><br>
       
     </div>
   <div class="footer">
