--- a/user_design.html
+++ b/user_design.html
@@ -20,7 +20,7 @@
     </header>
 
     <div class="pictures">
-        <img src="images/Index_template.png" alt = "Picture of dog" height="800" width="800" />
+        <img src="images/Index_template.png" alt = "Index page template" height="800" width="800" />
         <p>This is me and my dog</p>
     </div>
 
