modified links page

--- a/links.html
+++ b/links.html
@@ -17,13 +17,16 @@
         </ul>
       </nav>
     </header>
-    <div>
-      <a target="_blank" rel="noopener noreferrer" href="https://www.miniaturemarket.com/"><img src="images/miniature-market-logo.png" alt="miniature-market-logo"></a><br>
-
-      <a target="_blank" rel="noopener noreferrer" href="https://www.tcgplayer.com/"><img src="images/TCGplayer-logo-primary@2x.png" alt="TCGplayer-logo"></a><br>
-
-      <a target="_blank" rel="noopener noreferrer" href="https://www.crunchyroll.com/"><img src="images/Crunchyroll-Emblem-700x394.png" alt="TCGplayer-logo"></a><br>
-      
+    <div class="how-to">
+      <div class="global-setup">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.miniaturemarket.com/"><img src="images/miniature-market-logo.png" alt="miniature-market-logo"></a><br>
+      </div>
+      <div class="global-setup">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.tcgplayer.com/"><img src="images/TCGplayer-logo-primary@2x.png" alt="TCGplayer-logo"></a><br>
+      </div>
+      <div class="global-setup">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.crunchyroll.com/"><img src="images/Crunchyroll-Emblem-700x394.png" alt="TCGplayer-logo"></a><br>
+      </div>
     </div>
   <div class="footer">
   </div>
