--- a/user_design.html
+++ b/user_design.html
@@ -21,27 +21,27 @@
 
     <div class="pictures">
         <img src="images/Index_template.png" alt = "Index page template" height="800" width="800" />
-        <p>This is me and my dog</p>
+        <p>Inex page design</p>
     </div>
 
     <div class="pictures">
-        <img src="images/multimedia_template.png" alt = "Picture of dog" height="800" width="800" />
-        <p>This is me and my dog</p>
+        <img src="images/multimedia_template.png" alt = "Multimedia page template" height="800" width="800" />
+        <p>Multimedia page design</p>
     </div>
 
     <div class="pictures">
-        <img src="images/gallery_template.png" alt = "Picture of dog" height="800" width="800" />
-        <p>This is me and my dog</p>
+        <img src="images/gallery_template.png" alt = "Gellery page template" height="800" width="800" />
+        <p>Gallery page design</p>
     </div>
     
     <div class="pictures">
-        <img src="images/link_template.png" alt = "Picture of dog" height="800" width="800" />
-        <p>This is me and my dog</p>
+        <img src="images/link_template.png" alt = "Links page template" height="800" width="800" />
+        <p>Links page design</p>
     </div>
    
     <div class="pictures">
-        <img src="images/user_design_template.png" alt = "Picture of dog" height="800" width="800" />
-        <p>This is me and my dog</p>
+        <img src="images/user_design_template.png" alt = "User design page template" height="800" width="800" />
+        <p>User design page design</p>
     </div>
   <div class="footer">
         <div class="footer-head">
