add comments to links page

--- a/links.html
+++ b/links.html
@@ -20,12 +20,21 @@
     <div class="how-to">
       <div class="global-setup">
         <a target="_blank" rel="noopener noreferrer" href="https://www.miniaturemarket.com/"><img src="images/miniature-market-logo.png" alt="miniature-market-logo"></a><br>
+        <p>Miniature Market is an online store that caters to tabletop gamers. They have almost everything a home gamer could want. They also have deals throughout the year
+          and fantastic benefits for members such as coupons and points.
+        </p>
       </div>
       <div class="global-setup">
         <a target="_blank" rel="noopener noreferrer" href="https://www.tcgplayer.com/"><img src="images/TCGplayer-logo-primary@2x.png" alt="TCGplayer-logo"></a><br>
+        <P>TCGPlayer is an online store catering to trading card gaems such as Magic The Gathering, Yu-Gi-Oh, and Pokemon. They sell sealed products, but their main draw
+          is their sale of single cards.
+        </P>
       </div>
       <div class="global-setup">
         <a target="_blank" rel="noopener noreferrer" href="https://www.crunchyroll.com/"><img src="images/Crunchyroll-Emblem-700x394.png" alt="TCGplayer-logo"></a><br>
+        <p>Crunchyroll is the premier website in the USA for watching anime. It is a subscription based website but does offer a limited number of shows for free 
+          with ads.
+        </p>
       </div>
     </div>
   <div class="footer">
