change how to id

--- a/links.html
+++ b/links.html
@@ -17,7 +17,7 @@
         </ul>
       </nav>
     </header>
-    <div class="how-to">
+    <div id="how-to">
       <div class="global-setup">
         <a target="_blank" rel="noopener noreferrer" href="https://www.miniaturemarket.com/"><img src="images/miniature-market-logo.png" alt="miniature-market-logo"></a>
         <p>Miniature Market is an online store that caters to tabletop gamers. They have almost everything a home gamer could want. They also have deals throughout the year
