--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div>
   <h2>Week 4</h2>
   <div>
-  <p>
+  <p class="normal">
     Week 5 Objectives: <br>
     During week 5 of my course I will use the design document to add 3 more pages to my website. These will include 
     an image gallery, a links page, and a page displaying my design document. 
